--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "moment_spanish_locale": "^1.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
