--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^1.14.0",
     "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,9 +21,12 @@
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-shimmer-skeleton": "^1.0.3",
+    "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
@@ -69,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@storybook/addon-a11y": "^6.5.10",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
