--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@mdi/react": "^1.6.1",
     "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.9.0",
-    "@stripe/react-stripe-js": "^1.14.0",
-    "@stripe/stripe-js": "^1.42.0",
+    "@stripe/react-stripe-js": "^1.15.0",
+    "@stripe/stripe-js": "^1.44.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
@@ -42,7 +42,8 @@
     "lint": "eslint . --fix",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prod": "env-cmd -f ./.env react-scripts build"
   },
   "eslintConfig": {
     "extends": [
