Usando proxy2.php

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "om_ecommerce",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://oceanomedicina.net",
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
