--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "formik": "^2.2.9",
+    "framer-motion": "^7.10.0",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "moment_spanish_locale": "^1.0.2",
