--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "om_ecommerce",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://oceanomedicina.net",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
