--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "om_ecommerce",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "https://oceanomedicina.net",
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
@@ -20,6 +20,7 @@
     "iso-country-currency": "^0.6.0",
     "moment": "^2.29.4",
     "moment_spanish_locale": "^1.0.2",
+    "postcss": "^8.4.20",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
@@ -28,14 +29,14 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-shimmer-skeleton": "^1.0.3",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.29",
+    "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -82,27 +83,29 @@
     "@redux-devtools/core": "^3.13.1",
     "@storybook/addon-a11y": "^6.5.10",
     "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/node-logger": "^6.5.10",
     "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.10",
+    "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
-    "prettier": "^2.7.1",
+    "minimist": "1.2.7",
+    "prettier": "2.8.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.4",
     "webpack": "^5.74.0"
