--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
-    "singleQuote": true,
-    "trailingComma": "none",
-    "endOfLine": "auto",
-    "tabWidth": 2
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "jsxSingleQuote": true,
+  "bracketSpacing": true
 }
