Configuracion de prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "singleQuote": true,
-    "trailingComma": "none",
+    "trailingComma": "es5",
     "endOfLine": "auto",
+    "semi": true,
     "tabWidth": 2
 }
