--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intl-tel-input": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
