--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,7 @@
 {
-    "workbench.colorTheme": "Tomorrow Night Blue",
-    "background.enabled": true,
-        "background.fullscreen": {
-          "image": ["http://s3.thingpic.com/images/wK/1yHpMMa3aSx47MEP9WerGqa1.jpeg"], // url of your image
-          // "image": ["https://pathtoimage.png"], // An array may be useful when set interval for carousel
-          "opacity": 0.91, // 0.85 ~ 0.95 recommended
-          "size": "cover", // also css, `cover` to self-adaption (recommended)，or `contain`、`200px 200px`
-          "interval": 0 // seconds of interval for carousel, default `0` to disabled.
-        }
-      
+  "workbench.colorTheme": "Omni",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.formatOnType": true,
+  "prettier.eslintIntegration": true
 }
