--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-shimmer-skeleton": "^1.0.3",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.29",
+    "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -83,17 +83,16 @@
     "@redux-devtools/core": "^3.13.1",
     "@storybook/addon-a11y": "^6.5.10",
     "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/node-logger": "^6.5.10",
     "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.10",
+    "@storybook/react": "^6.1.21",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
-    "babel-eslint": "^10.1.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
