--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
+    "enzyme": "^3.11.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.10.0",
     "http-proxy-middleware": "^2.0.6",
@@ -103,6 +104,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
+    "jest": "^29.4.1",
     "prettier": "^2.8.3",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.4",
