--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,windows,linux,node
 
 build
+.vscode
