--- a/package.json
+++ b/package.json
@@ -4,42 +4,42 @@
   "private": true,
   "proxy": "http://127.0.0.1:8000",
   "dependencies": {
-    "@mdi/js": "^7.0.96",
-    "@mdi/react": "^1.6.1",
-    "@paypal/react-paypal-js": "^7.8.1",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@stripe/react-stripe-js": "^1.15.0",
-    "@stripe/stripe-js": "^1.44.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bulma": "^0.9.4",
-    "formik": "^2.2.9",
-    "framer-motion": "^7.10.0",
-    "http-proxy-middleware": "^2.0.6",
-    "iso-country-currency": "^0.6.0",
-    "moment": "^2.29.4",
-    "moment_spanish_locale": "^1.0.2",
-    "postcss": "^8.4.20",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-bulma-components": "^4.1.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "react-shimmer-skeleton": "^1.0.3",
-    "react-transition-group": "^4.4.5",
-    "redux": "^4.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.3",
-    "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.8",
-    "sweetalert2-react-content": "^5.0.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "@mdi/js": "7.2.96",
+    "@mdi/react": "1.6.1",
+    "@paypal/react-paypal-js": "7.8.3",
+    "@reduxjs/toolkit": "1.9.5",
+    "@stripe/react-stripe-js": "2.1.0",
+    "@stripe/stripe-js": "1.52.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/user-event": "14.4.3",
+    "axios": "1.3.6",
+    "bulma": "0.9.4",
+    "formik": "2.2.9",
+    "framer-motion": "10.12.4",
+    "http-proxy-middleware": "2.0.6",
+    "iso-country-currency": "0.7.2",
+    "moment": "2.29.4",
+    "moment_spanish_locale": "1.0.2",
+    "postcss": "8.4.23",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-bulma-components": "4.1.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.8.0",
+    "react-redux": "8.0.5",
+    "react-router": "6.10.0",
+    "react-router-dom": "6.10.0",
+    "react-scripts": "5.0.1",
+    "react-shimmer-skeleton": "1.0.3",
+    "react-transition-group": "4.4.5",
+    "redux": "4.2.1",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "2.1.3",
+    "styled-components": "5.3.9",
+    "sweetalert2": "11.4.8",
+    "sweetalert2-react-content": "5.0.3",
+    "web-vitals": "3.3.1",
+    "yup": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -80,34 +80,34 @@
     ]
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1",
-    "@storybook/addon-a11y": "^6.5.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
-    "@storybook/node-logger": "^6.5.10",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.1.21",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/react": "^13.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint": "^8.30.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.4",
-    "minimist": "1.2.7",
-    "prettier": "2.8.1",
-    "react-test-renderer": "^18.2.0",
-    "sass": "^1.54.4",
-    "webpack": "^5.74.0"
+    "@redux-devtools/core": "3.13.1",
+    "@storybook/addon-a11y": "7.0.6",
+    "@storybook/addon-actions": "7.0.6",
+    "@storybook/addon-essentials": "7.0.6",
+    "@storybook/addon-interactions": "7.0.6",
+    "@storybook/addon-links": "7.0.6",
+    "@storybook/builder-webpack5": "7.0.6",
+    "@storybook/manager-webpack5": "6.5.16",
+    "@storybook/node-logger": "7.0.6",
+    "@storybook/preset-create-react-app": "7.0.6",
+    "@storybook/react": "7.0.6",
+    "@storybook/testing-library": "0.1.0",
+    "@testing-library/react": "14.0.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint": "8.38.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.11",
+    "minimist": "1.2.8",
+    "prettier": "2.8.7",
+    "react-test-renderer": "18.2.0",
+    "sass": "1.62.0",
+    "webpack": "5.80.0"
   }
 }
