--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bulma-components": "4.1.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
+    "react-phone-number-input": "^3.2.22",
     "react-redux": "8.0.5",
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
