--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "om_ecommerce",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:8000",
+  "proxy": "https://oceanomedicina.net/api-payments/public",
   "dependencies": {
     "@mdi/js": "7.2.96",
     "@mdi/react": "1.6.1",
