Actualizacion del ignore

--- a/.gitignore
+++ b/.gitignore
@@ -243,4 +243,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,windows,linux,node
 
 build
+old-build/*
 package-lock.json
